--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@
 
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>
+        <h1>Portfólio</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#sobre">Sobre</a>
+            <a href="#projetos">Projetos</a>
+            <a href="#serviços">Serviços</a>
+            <a href="#conhecimentos">Conhecimentos</a>
+            <a href="#contato">Contato</a>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <div>
+                <p>Bem vindo ao meu mundo!</p>
+<h1>Olá, sou Fernanda Sene</h1>
+<p>Desenvolvedora Front-end e Assessora de Marketing</p>
+            </div>
+            <a href="https://github.com/FernandNsp">@FernandNsp</a>
+        </section>
+    </main>
 </body>
 </html>
