--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Portfólio - byron.solutions</title>
+<title>Portfólio</title>
 
 <link rel="stylesheet" href="./styles/index.css">
 
@@ -30,12 +30,14 @@
 
     <main>
         <section id="home">
-            <div>
+            <div class="home-cta">
+            <div class="home-heading">
                 <p>Bem vindo ao meu mundo!</p>
 <h1>Olá, sou Fernanda Sene</h1>
 <p>Desenvolvedora Front-end e Assessora de Marketing</p>
             </div>
-            <a href="https://github.com/FernandNsp">@FernandNsp</a>
+            <a href="https://github.com/FernandNsp" target="_blank">@FernandNsp</a>
+            </div>
         </section>
     </main>
 </body>
