adding section about

--- a/index.html
+++ b/index.html
@@ -36,9 +36,24 @@
 <h1>Olá, sou Fernanda Sene</h1>
 <p>Desenvolvedora Front-end e Assessora de Marketing</p>
             </div>
-            <a href="https://github.com/FernandNsp" target="_blank">@FernandNsp</a>
+            <a class="btn" href="https://github.com/FernandNsp" target="_blank">@FernandNsp</a>
             </div>
         </section>
+
+        <section id="about">
+            <h2>Sobre</h2>
+            <img src="./assets/img-pessoa.jpg" alt="Foto de uma mulher negra sorrindo com o céu limpo ao fundo">
+           
+            <p>Fames enim a pharetra adipiscing. Hac gravida sit sed tellus libero ridiculus. Vitae dolor integer ultricies nec mauris odio vulputate. Ante enim proin faucibus suspendisse eget feugiat elit. Nisl consequat pellentesque in posuere faucibus vitae, magna. Pulvinar risus suspendisse sem rhoncus sagittis, viverra odio turpis tempus.</p>
+
+            <p>Tellus aliquet risus nunc egestas. Posuere libero ultricies sit ante eget fusce lacus hac viverra. Porta auctor faucibus odio vitae at aliquam suscipit in. Ac porttitor nibh mattis sed consequat quis.</p>
+          
+            <div class="about-links">
+            <a class="btn" href="" target="_blank">@FulanoDeTal</a>
+            <a class="btn" href="" target="_blank">@FulanoDeTal</a>
+            </div>
+        </section>
+
     </main>
 </body>
 </html>
