adding projects section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,32 @@
             </div>
         </section>
 
+<section id="projects">
+    <h2>Projetos</h2>
+    
+    <div id="cards">
+
+<article class="card">
+    <img src="./assets/foodtruck.jpg" alt="Mesa com um celular e um caderno com anotações">
+    <h3>Foodtruck</h3>
+    <p>Risus ac nisl, augue fermentum dis congue ornare dignissim lobortis. Est tincidunt purus enim amet. augue fermentum dis dignissim.</p>
+</article>
+
+<article class="card">
+    <img src="./assets/academia-star.jpg" alt="Mesa com dois monitores abertos em abas de um projeto">
+    <h3>Academia Star</h3>
+    <p>Risus ac nisl, augue fermentum dis congue ornare dignissim lobortis. Est tincidunt purus enim amet. augue fermentum dis dignissim.</p>
+</article>
+
+<article class="card">
+    <img src="./assets/landing-page.jpg" alt="Celular com diversos ícones de redes sociais">
+    <h3>Landing Page</h3>
+    <p>Risus ac nisl, augue fermentum dis congue ornare dignissim lobortis. Est tincidunt purus enim amet. augue fermentum dis dignissim.</p>
+</article>
+</div>
+<a class="btn" href="" target="_blank">Repositórios no GitHub</a>
+</section>
+
     </main>
 </body>
 </html>
