--- a/index.html
+++ b/index.html
@@ -80,6 +80,28 @@
 <a class="btn" href="" target="_blank">Repositórios no GitHub</a>
 </section>
 
+<section id="services">
+<div class="services">
+    <h2>Serviços</h2>
+    <ul role="list">
+        <li class="btn">Web development</li>
+        <li class="btn">Mobile App</li>
+        <li class="btn">Web Design</li>
+    </ul>
+</div>
+<div class="knowledge">
+    <h2>Conhecimentos</h2>
+    <ul role="list"> 
+        <li class="btn">HTML</li>
+        <li class="btn">CSS</li>
+        <li class="btn">JS</li>
+        <li class="btn">FIGMA</li>
+        <li class="btn">PSHOP</li>
+        <li class="btn">GIT</li>
+    </ul>
+</div>
+</section>
+
     </main>
 </body>
 </html>
