adding section contacts and footer - finishing "mobile first"

--- a/index.html
+++ b/index.html
@@ -102,6 +102,24 @@
 </div>
 </section>
 
+<section id="contact">
+    <h2>entre em Contato</h2>
+    <ul role="list">
+        <li><a href="#" target="_blank">(99) 99999-9999</a></li>
+        <li><a href="#" target="_blank">contato@email.com</a></li>
+        <li><a href="#" target="_blank">@FulandoDeTal</a></li>
+    </ul>
+    <cite>May the force be with you!</cite>
+</section>
+
     </main>
+
+<footer>
+    <a href="https://www.byronsolutions.com/" target="_blank">
+    <span>Desenvolvido por</span> 
+    <img src="./assets/logo-byron.png" alt="Logo da byron.solutions">
+    </a>
+</footer>
+
 </body>
 </html>
