--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1>Olá, sou Fernanda Sene</h1>
             <p>Desenvolvedora Front-end e Assessora de Marketing</p>
           </div>
-          <a class="btn" href="https://github.com/FernandNsp" target="_blank">
+          <a class="btn" href="#" target="_blank">
             <i class="fa-brands fa-github fa-xl"></i>
             @FernandNsp
           </a>
@@ -93,7 +93,7 @@
               <i class="fa-brands fa-linkedin fa-xl"></i>
               @FulanoDeTal</a
             >
-            <a class="btn" href="" target="_blank">
+            <a class="btn" href="#" target="_blank">
               <i class="fa-brands fa-instagram fa-xl"></i>
               @FulanoDeTal</a
             >
